style.css
@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Inconsolata", monospace;
    scroll-behavior: smooth;
}
.container{
    width: 90%;
    margin: auto;
}
.section-header{
    padding: 20px 0 50px;
    text-align: center;
    margin-bottom: 40px;
}
.section-header h2{
    padding: 20px 0 15px;
    font-size: 35px;
    font-style: italic;
}
.section-header h2 span{
    color: #6B8E23;
}
.section-header p{
    font-size: 17px;
    font-family: monospace;
    margin: auto;
    color: #6B8E23;
}
/* header section area */
.header-area{
    width: 100vw;
    height: 100vh;
    background: url(img/background.jpg) no-repeat center center / cover;
    background-attachment: fixed;
    position: relative;
}
.nav-area{
    display: flex;
    justify-content: space-between;
    padding: 50px 0;
}
.nav-area .left-menu, .nav-area .right-menu{
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 50px;
    list-style-type: none;
}
.nav-area .left-menu li a, .nav-area .right-menu li a{
    text-decoration: none;
    font-size: 22px;
    color: white;
    letter-spacing: 2px;
}
.nav-area li a:hover{
    text-decoration: underline;
}
.nav-area .logo{
    text-decoration: none;
    color: white;
    font-size: 40px;
    font-weight: bold;
}
.header-area .header-text{
    width: 100%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    padding: 50px 0;
    text-align: center;
}
.header-area .header-text h3{
    color: white;
    text-align: center;
    margin: 20px auto 10px;
    font-size: 30px;
}
.header-area .header-text h1{
    font-size: 46px;
    padding: 20px 0;
    color: white;

}
.header-area .header-text p{
    width: 80%;
    margin: auto;
    color: white;
    padding: 30px 0;
    font-size: 20px;
    line-height: 1.5;
}
.header-area .header-text #header-btn{
    padding: 7px 15px;
    font-size: 18px;
    border-radius: 5px;
    color: white;
    letter-spacing: 6px;
    display: block;
    margin: 50px auto;
    transition: 0.5s all ease-in-out;
    background-color: #6B8E23;
    border: 2px solid #6B8E23;
}
.header-area .header-text #header-btn:hover{
    background-color: transparent;
    border: 2px solid #415a0f;
    color: white;
    cursor: pointer;
    box-shadow: 0 0 10px 5px #6B8E23;
}
/* animals section area */
.animals-section-area{
    padding: 0 0 50px;
    overflow: hidden;
}
.animals-section-area .animals-area{
    display: flex;
    justify-content: space-around;
    gap: 20px;
    margin: 0 0 40px;
}
.animals-section-area .animals-area:nth-child(odd) .animals-text-area{
    background: linear-gradient(to bottom,#6B8E23, #242e10);
}
.animals-section-area .animals-area:nth-child(even) .animals-text-area{
    background: linear-gradient(to bottom,#242e10, #6B8E23);
}
.animals-area .animals-img-area .animals-img{
    width: 100%;
    height: 450px;
    box-shadow: 10px 20px 10px black;
    border-radius: 10px / 30px;
}
.animals-img-area, .animals-text-area{
    width: 50%;
    padding: 10px 30px;
    border-radius: 10px;
}
.animals-area .animals-text-area{
    text-align: justify;
}
.animals-area .animals-text-area .name{
    font-size: 40px;
    text-transform: uppercase;
    letter-spacing: 5px;
    padding: 0 0 20px;
    text-align: center;
    font-weight: bold;
}
.animals-area .animals-text-area p{
    line-height: 2;
    font-size: 20px;
    letter-spacing: 2px;
    font-family: "Roboto", sans-serif;
}
.animals-area .animals-text-area .info-btn{
    text-decoration: none;
    display: inline-block;
    font-size: 20px;
    text-align: center;
    padding: 10px 20px;
    margin: 20px auto;
    background-color: black;
    color: white;
}
/* gallery section area */
.gallery-area{
    background-color: #dfdfdf;
    padding: 0 0 50px;
}
.gallery-area .gallery-section-container{
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-around;
    gap: 50px 10px;
}
.gallery-area .gallery-card{
    width: 23%;
    border: 2px solid #6B8E23;
    position: relative;
}
.gallery-area .gallery-card .card-img{
    width: 100%;
    height: 400px;
}
.gallery-area .gallery-card img{
    width: 100%;
    height: 100%;
    object-fit: cover;
}
.gallery-area .gallery-card .name{
    font-size: 25px;
    font-weight: bold;
    letter-spacing: 5px;
    background-color: #6B8E23;
    display: inline-block;
    padding: 20px 7px;
    color: white;
    writing-mode: sideways-rl;
    position: absolute;
    top: 100%;
    left: 0;
    transform: translateY(-100%);
    border-top-right-radius: 30px;
}

